// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tooltip attributes basic tooltip 1`] = `
<div>
  <span
    data-tooltip-content="Hello World!"
    id="basic-example-attr"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-top"
    role="tooltip"
    style="left: 5px; top: -10px;"
  >
    Hello World!
    <div
      class="react-tooltip-arrow"
      style="left: 5px; bottom: -4px;"
    />
  </div>
</div>
`;

exports[`tooltip attributes tooltip with place 1`] = `
<div>
  <span
    data-tooltip-content="Hello World!"
    data-tooltip-place="right"
    id="example-place-attr"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-right"
    role="tooltip"
    style="left: 10px; top: 5px;"
  >
    Hello World!
    <div
      class="react-tooltip-arrow"
      style="left: -4px; top: 5px;"
    />
  </div>
</div>
`;

exports[`tooltip attributes tooltip without element reference 1`] = `
<div>
  <span
    data-tooltip-content="Hello World!"
  >
    Lorem Ipsum
  </span>
</div>
`;
